# argus

./: .env.example  .gitignore  .pre-commit-config.yaml  .prettierignore  .prettierrc  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  README.zh.md  SECURITY.md  backend_server.py  build_package.py  index.html  package-lock.json  package.json  playwright.config.ts  pllink_proto.py  pyproject.toml  run.py  sim_pllink.py  tsconfig.json  vite.config.ts
.claude-memory-bootstrap/: MEMORY.md  README.md  feedback_argus_is_gcs.md  feedback_auto_commit.md  feedback_auto_push.md  feedback_fail_loud_first.md  feedback_mention_pymavlink.md  feedback_no_coauthor.md  feedback_protocol_discipline.md  feedback_rerun_after_interrupt.md  feedback_shorten_feedback_loop.md  feedback_test_boundaries.md  project_audit_state_may2026.md  project_vmware_usb_unstable.md
.githooks/: pre-commit  pre-push
.github/: dependabot.yml  pull_request_template.md
backend/: app.py  auth.py  commands.py  config.py  connection.py  constants.py  crc_extras.py  drone_link.py  firmware.py  locale_text.py  log.py  mavlink_dispatch.py  mavlink_handlers.py  models.py  param_manager.py  param_meta.py  pllink_proto.py  replay.py  server.py  state.py  statustext_filter.py  terrain.py  tiles.py  video.py  ws_manager.py
docs/: DEV_WORKFLOW.md  FEATURE_CHECKLIST.md  MIGRATION_TO_WSL.md  PANEL_REALITY_MAP.md  protocol_design.md
public/: manifest.json  sw.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: PLACEHOLDER
src-tauri/src/: main.rs
(+399 files in other folders)
