[project]
name = "argus-gcs"
version = "3.4.0"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0,<1.0",
    "uvicorn[standard]>=0.34.0,<1.0",
    "websockets>=14.0,<17.0",
    "python-multipart>=0.0.9",
    "pyserial>=3.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.25.0",
    "httpx>=0.28.0",
    "pytest-cov>=6.0",
    "ruff>=0.8.0",
    "pymavlink>=2.4.49",
]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = ["E501", "UP031", "SIM105", "SIM102", "SIM108", "SIM115", "E402", "E741", "E701", "B023", "B904", "B011"]

[tool.ruff.lint.isort]
known-first-party = ["backend"]
